--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
 			alt='Asociția pentru Inovație'>
 	</ion-row>
 	<div class='material-card'>
-		<ion-row justify-content-around>
+		<ion-row justify-content-center>
 			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navContact()'>
 				Privacy Policy
 			</ion-button>
@@ -19,6 +19,9 @@
 			</ion-button>
 			<ion-button href='https://www.facebook.com/Atlantykron' class='footer-btn' fill='clear' expand='full'>
 				<ion-icon name="logo-facebook"></ion-icon>			
+			</ion-button>
+			<ion-button href='https://www.instagram.com/atlantykron/' class='footer-btn' fill='clear' expand='full'>
+				<ion-icon name="logo-instagram"></ion-icon>			
 			</ion-button>
 		</ion-row>
 	</div>
