--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -28,7 +28,7 @@
 
 .hero-subheader {
     color: white;
-    opacity: 80%;
+    opacity: .80;
     font-size: 40px;
     font-style: bold;
 }
@@ -51,10 +51,6 @@
     margin-top: -90px;
     padding-top: 90px;
 }
-
-// .space-hero-btn {
-//     margin-top: 30px;
-// }
 
 .space-hero-subt {
     margin-top: 4%;
