--- a/src/app/organizers/organizers.page.scss
+++ b/src/app/organizers/organizers.page.scss
@@ -45,3 +45,11 @@ ion-content {
     text-align: center;
     margin-left: 0px;
 }
+
+.spinner {
+    width: 100%;
+    align-items: center;
+    margin: 50px auto;
+    justify-content: center;
+    display: flex;
+}
