--- a/src/app/participate/participate.page.html
+++ b/src/app/participate/participate.page.html
@@ -7,8 +7,8 @@
                 <ion-row *ngIf="menuBreakpoint">
                     <ion-item class="select-step central-cards">
                         <ion-label>Selectați Pasul</ion-label>
-                        <ion-select (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
-                            <ion-select-option *ngFor="let stepOption of ['login', 'guide', 'rules', 'enrollForm', 'otherParticipants']"
+                        <ion-select interface="popover" (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
+                            <ion-select-option *ngFor="let stepOption of ['login', 'guide', 'rules', 'enrollForm']"
                                 value="{{stepOption}}">{{stepDisplay[stepOption]}}</ion-select-option>
                         </ion-select>
                     </ion-item>
@@ -26,9 +26,6 @@
                       <ion-segment-button value="enrollForm">
                         <ion-label>{{stepDisplay.enrollForm}}</ion-label>
                       </ion-segment-button>
-                      <ion-segment-button value="otherParticipants">
-                        <ion-label>{{stepDisplay.otherParticipants}}</ion-label>
-                      </ion-segment-button>
                 </ion-segment>
                 
                 <ion-col>
@@ -36,7 +33,6 @@
                   <app-segment-guide *ngIf="step == 'guide'"></app-segment-guide>
                   <app-segment-rules *ngIf="step == 'rules'"></app-segment-rules>
                   <app-segment-form *ngIf="step == 'enrollForm'"></app-segment-form>
-                  <app-segment-participants *ngIf="step == 'otherParticipants'"></app-segment-participants>
                 </ion-col>
 
             </ion-col>
