--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -26,7 +26,7 @@
 .illustration-description {
     max-width: 156px;
     font-size: smaller;
-    opacity: 65%;
+    opacity: .65;
     text-align: left;
 }
 
