--- a/src/app/instructors/instructors.page.scss
+++ b/src/app/instructors/instructors.page.scss
@@ -54,3 +54,11 @@ ion-content {
 .year-selection-div {
     border-right: 5px solid #707070;
 }
+
+.spinner {
+    width: 100%;
+    align-items: center;
+    margin: 50px auto;
+    justify-content: center;
+    display: flex;
+}
