ux improvements, added link to privacy policy page during registration, added blank privacy policy page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
 	</ion-row>
 	<div class='material-card'>
 		<ion-row justify-content-center>
-			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navContact()'>
+			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navPrivacyPolicy()'>
 				Privacy Policy
 			</ion-button>
 			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navContact()'>
