--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -7,8 +7,8 @@
                 {{ 'callToAction' | translate }}
             </ion-button>
             <div id='scrim'>
-                <h2 class='hero-subheader' *ngIf='!mobile' [ngClass]='{"space-hero-subt": !mobile}'>Ediția 34</h2>
-                <h2 class='hero-subheader' *ngIf='!mobile'>02 August - 11 August 2020</h2>
+                <h2 class='hero-subheader' *ngIf='!mobile' [ngClass]='{"space-hero-subt": !mobile}'>Ediția 35</h2>
+                <!-- <h2 class='hero-subheader' *ngIf='!mobile'>02 August - 11 August 2020</h2> -->
             </div>
         </div>
     </div>
