--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -18,12 +18,12 @@
                 <p>Sau</p>
                 <ion-row class='login-row-btn'>
                     <ion-button name="star" fill='outline' class='login-button' (click)='googleLoginHandler()'>
-                        <span><img class="comp-logo" src='../../assets/images/google-logo.svg.png' alt='google icon'></span> Logare
+                        <span><img class="comp-logo" src='../../assets/images/google-logo.svg.png' alt='google icon'></span> Continuă cu Google
                     </ion-button>
                 </ion-row>
                 <ion-row class='login-row-btn'>
                     <ion-button name="star" fill='outline' class='login-button' (click)='facebookLoginHandler()'>
-                        <span><img class="comp-logo" src='../../assets/images/fb-logo.svg.png' alt='facebook icon'></span> Logare
+                        <span><img class="comp-logo" src='../../assets/images/fb-logo.svg.png' alt='facebook icon'></span> Continuă cu Facebook
                     </ion-button>
                 </ion-row>     
                 <p id='forgot' (click)='navForgot()'>Ai uitat parola? <span id='click-here'>Click Aici</span></p>
