--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -35,14 +35,14 @@
     height: 0.5px;
     margin: 0 auto;
     margin-left: 15px;
-    opacity: 35%;
+    opacity: .35;
     width: 100px;
 }
 
 .section-subtitle {
     margin: 0 auto;
     margin-top: 40px;
-    opacity: 65%;
+    opacity: .65;
     text-align: left;
     width: 42%;
 }
