ux improvements, implemented single entry page, deleted login segment, started form segment

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -96,7 +96,7 @@
                     class='navbar-button'
                     (click)="navigateToParticipate()"
                     [ngClass]='{"active": router.url == "/participate"}'>
-                    Participă
+                    Înscrieri
                 </ion-button>
                 <ion-button 
                     fill='clear' 
