--- a/src/app/participate/participate.page.html
+++ b/src/app/participate/participate.page.html
@@ -8,15 +8,12 @@
                     <ion-item class="select-step central-cards">
                         <ion-label>Selectați Pasul</ion-label>
                         <ion-select interface="popover" (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
-                            <ion-select-option *ngFor="let stepOption of ['login', 'guide', 'rules', 'enrollForm']"
+                            <ion-select-option *ngFor="let stepOption of ['guide', 'rules', 'enrollForm']"
                                 value="{{stepOption}}">{{stepDisplay[stepOption]}}</ion-select-option>
                         </ion-select>
                     </ion-item>
                 </ion-row>
                 <ion-segment (ionChange)="segmentChanged($event.detail.value)" *ngIf="!menuBreakpoint" [(ngModel)]="step">
-                    <ion-segment-button value="login">
-                      <ion-label>{{stepDisplay.login}}</ion-label>
-                    </ion-segment-button>
                     <ion-segment-button value="guide">
                       <ion-label>{{stepDisplay.guide}}</ion-label>
                     </ion-segment-button>
@@ -29,7 +26,6 @@
                 </ion-segment>
                 
                 <ion-col>
-                  <app-segment-login *ngIf="step == 'login'"></app-segment-login>
                   <app-segment-guide *ngIf="step == 'guide'"></app-segment-guide>
                   <app-segment-rules *ngIf="step == 'rules'"></app-segment-rules>
                   <app-segment-form *ngIf="step == 'enrollForm'"></app-segment-form>
