--- a/src/app/single-entry/single-entry.page.html
+++ b/src/app/single-entry/single-entry.page.html
@@ -13,9 +13,9 @@
       <ion-spinner name="circular"></ion-spinner>
     </div>
 
-    <ion-row *ngIf="!isLoading" justify-content-center class='main-col'>
+    <ion-row *ngIf="!isLoading" justify-content-center class='main-col' [ngClass]='{"center-on-mobile": mobile || tablet}'>
       <ion-col size="auto">
-        <img class="pseudo-fancy-card" src={{data.pictureLink}}/>
+        <img [ngClass]='{"center-on-mobile": mobile || tablet}' class="pseudo-fancy-card" src={{data.pictureLink}}/>
         <p class="presenceYears">
           <span *ngIf="data.years.length > 1">Ani</span>
           <span *ngIf="data.years.length === 1">An</span>
