--- a/src/app/single-entry/single-entry.page.scss
+++ b/src/app/single-entry/single-entry.page.scss
@@ -69,3 +69,10 @@ ion-content {
     margin: 0 0 60px 30px;
     margin-top: inherit;
 }
+
+.center-on-mobile {
+    padding: 0px;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+}
