--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
 	<div class='material-card'>
 		<ion-row justify-content-center>
 			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navPrivacyPolicy()'>
-				Privacy Policy
+				Politică de Confidențialitate
 			</ion-button>
 			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navContact()'>
 				Contact			
