--- a/src/app/single-entry/single-entry.page.scss
+++ b/src/app/single-entry/single-entry.page.scss
@@ -44,7 +44,7 @@ ion-content {
 	margin-right: auto;
 	// margin-top: -10px;
     right: 0;
-    // padding-top: 60px;
+    padding-top: 60px;
 	width: 90%;
 }
 
